# flight-builder

./: .gitignore  Cargo.toml  README.md  coverage.sh
.github/workflows/: coverage.yml  gen_docs.yml  test.yml
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
docs/flight_builder/: all.html  index.html  sidebar-items.js
docs/flight_builder_core/: all.html  enum.Schedule.html  index.html  sidebar-items.js  struct.FunctionTask.html  struct.Res.html  struct.ResMut.html  struct.Scheduler.html  struct.TaskRunner.html  trait.IntoTask.html  trait.Task.html  type.StoredTask.html
examples/: pop_timer.rs  state_machine.rs
examples/rp2040-template/: Cargo.toml
examples/rp2350a-pico2-template/: Cargo.toml
examples/rp2350a-pico2-template/.cargo/: config.toml
examples/rp2350a-pico2-template/src/: main.rs
flight-builder-core/: Cargo.toml  README.md
flight-builder-core/examples/: pop_timer.rs
flight-builder-core/src/: lib.rs  query.rs  scheduler.rs  tasks.rs
flight-builder-macros/: Cargo.toml
flight-builder-macros/src/: lib.rs
flight-builder-rp/: Cargo.toml  README.md
src/: clock.rs  events.rs  lib.rs  query.rs  scheduler.rs  states.rs  tasks.rs
src/clock/: cortex_m.rs  mod.rs  std.rs
src/events/: mod.rs  reader.rs  writer.rs
src/map/: heap_sort.rs  mod.rs
src/query/: mod.rs  res.rs  res_mut.rs
src/scheduler/: build.rs  mod.rs  runner.rs
src/states/: mod.rs  state_transition_event.rs
src/tasks/: function_task.rs  into_task.rs  mod.rs  stored_task.rs  task.rs
tests/: basic.rs  events.rs  plugins.rs  states.rs
(+185 files in other folders)
