[package]
name = "flight-builder"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", optional = true }
cortex-m-rt = { version = "0.7.5", optional = true, features = ["device"] }
embedded-time = "0.12.1"
flight-builder-macros = { path = "flight-builder-macros" }
hashbrown = { version = "0.15.2" }
defmt = { version = "0.3.8", optional = true }
without-alloc = "0.2.2"
static-alloc = "0.2.5"

[dev-dependencies]
rand = "0.9.0"


[features]
default = ["std"]
std = []
cortex-m = ["dep:cortex-m", "dep:cortex-m-rt", "dep:defmt"]
