[package]
name = "rp2350a-pico2-template"
version = "0.1.0"
edition = "2024"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }



flight-builder = { path = "../../", default-features = false, features = [
    "cortex-m",
] }
